@@ -3,6 +3,9 @@ Released on 2020-09-14?
 ======================================
 
 
+bpo-40181: In calltips, stop reminding that '/' marks the end of
+positional-only arguments.
+
 bpo-41468: Improve IDLE run crash error message (which users should
 never see).
 
